feat: add MT7927 shim module and DMA firmware loader
  Add infrastructure to enable MT7927 WiFi 7 support using the existing
  mt7925e kernel driver:

  DKMS Shim Module (dkms/):
  - mt7927_shim.c: Runtime PCI ID injection to mt7925e driver
  - Makefile and dkms.conf for DKMS installation
  - 99-mt7927.rules: udev rules for automatic loading
  - install-dkms.sh: Installation helper script

  Test Module (tests/04_risky_ops/mt7927_mcu_fw.c):
  - Standalone MCU firmware loader implementation
  - DMA ring configuration matching mt76 driver patterns
  - Implements MCU command protocol (PATCH_SEM, FW_SCATTER, FW_START)
  - Extensive debugging for register access verification

  Key findings from DMA investigation:
  - WFDMA registers accessible at BAR0+0x2000 (remapped from 0xd4000)
  - Ring config works for indices 1/2 but not 15/16
  - GLO_CFG, CIDX writes verified working
  - DIDX never advances - chip requires full mt76 init sequence

  Installation scripts:
  - install-mt7927.sh: Attempts new_id binding approach
  - setup-wifi.sh: Network configuration helper

  The shim module successfully binds mt7925e to MT7927, though MCU
  communication times out (patch semaphore). Further investigation needed
  for full firmware loading support.

Signed-off-by: Nicholas Chen <nixholas@icloud.com>

--- a/tests/Kbuild
+++ b/tests/Kbuild
@@ -33,6 +33,7 @@ obj-m += 04_risky_ops/test_mt7925_firmware.o
 obj-m += 04_risky_ops/mt7927_wrapper.o
 obj-m += 04_risky_ops/mt7927_init.o
 obj-m += 04_risky_ops/mt7927_init_dma.o
+obj-m += 04_risky_ops/mt7927_mcu_fw.o
 
 # Exploration tools
 obj-m += tools/mt7927_data_dumper.o
